proxmox-talos/apps/open-webui/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: open-webui-ingress
  namespace: open-webui
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.tls.certresolver: letsencrypt
  labels:
    app: open-webui
    app.kubernetes.io/name: open-webui
    app.kubernetes.io/part-of: open-webui-stack
spec:
  ingressClassName: traefik
  tls:
  - hosts:
    - open-webui.botocudo.net
    secretName: open-webui-botocudo-net-tls
  rules:
  - host: open-webui.botocudo.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: open-webui
            port:
              number: 8080
